feat(console): add media upload and send
